# excelpivotdata

./: Cargo.toml  Pivot.xlsx  README.md  pyproject.toml
src/: Untitled-1.ipynb  lib.rs
src/excel/: Cargo.toml
src/excel/src/: errors.rs  lib.rs  pivottable.rs  pivottable_backup.rs  reader.rs  workbook.rs
