[package]
name = "excelpivotdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "/src",
    "/src/excel"
]

[lib]
name = "excelpivotdata"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "excelpivotdata"


[dependencies]
pyo3 = "0.18.1"
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
polars-core = { version = "0.28.0" }
pyo3-polars = "0.2.0"
byteorder = "1.3.4"
codepage = "0.1.1"
encoding_rs = "0.8.24"
log = "0.4.11"
once_cell = { version = "1.15", optional = true }
serde = "1.0.116"
quick-xml = { version = "0.28.2", features = ["encoding"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
async_zip = { version = "0.0.15", features = ["full"] }
chrono = { version = "0.4.22", features = [
    "serde",
], optional = true, default-features = false }

#my packages
excel = { path = "src/excel" }
clippy = "0.0.302"

[workspace]
members = ["src/excel/"]
