[package]
name = "excel"
version = "0.1.1"
edition = "2021"

[dependencies]

log = "0.4.11"
quick-xml = { version = "0.28.2", features = ["encoding"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
async_zip = { version = "0.0.15", features = ["full"] }
chrono="0.4"
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }